--- a/package.json
+++ b/package.json
@@ -43,11 +43,13 @@
     }
   },
   "dependencies": {
-    "@expo/config-plugins": "~4.1.4"
+    "@expo/config-plugins": "~4.1.4",
+    "resolve-from": "^5.0.0"
   },
   "peerDependencies": {
-    "indy-sdk-react-native": "^0.2.2",
-    "react-native": ">= 0.68"
+    "expo": "~47",
+    "indy-sdk-react-native": "^0.3.0",
+    "react-native": ">= 0.70"
   },
   "publishConfig": {
     "access": "public",
